--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
         <swagger2.version>2.9.2</swagger2.version>
     </properties>
     <dependencies>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.4</version>
+        </dependency>
+
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
