--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,10 @@
         <swagger2.version>2.9.2</swagger2.version>
     </properties>
     <dependencies>
-
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
