--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
   port: 9000
 spring:
+  datasource:
+    url: jdbc:h2:~/table_info
+      driver-class-name: org.h2.Driver
+      username: sa
+      password: 123456
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
