--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,9 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>com.jparams</groupId>
+            <artifactId>data-store</artifactId>
+            <version>3.1.4</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
